--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -174,7 +174,7 @@ In ABC/CARE, many control group members attended alternative preschools.\footnot
 
 Figure~\ref{fig:treatsubcare_2} shows the proportion of the sample enrolled in an alternative school at a given age who persist in alternative care at the next age. Once enrolled, they stay enrolled, and children generally go for a full year.  Figure~\ref{fig:treatsubcare} shows (for each program) the cumulative distribution of the proportion of the first five years that control subjects were enrolled in alternative preschools. Figure~\ref{fig:proportion-alt-pre} shows the distribution of time spent in the alternative program for all control group participants.
 
-Although not significant in many cases, children in the control group who attend alternative preschools are less economically disadvantaged at baseline, if compared to children who stay at home. This as measured by: maternal education, maternal IQ, Apgar scores at minutes 1 and 5, and the high-rik index defining ABC/CARE eligibility. They also have less siblings. On average, they are children of mothers who are more likely to be working at baseline (significant at 10\%). See Table~\ref{table:controlsubscharacteristics} in Appendix~\ref{appendix:background} for tests of differences between these variables across children in the control group who attend and who do not attend alternative preschools.
+Although not significant in many cases, children in the control group who attend alternative preschools are less economically disadvantaged at baseline when compared to children who stay at home. Disadvantage is measured by: maternal education, maternal IQ, Apgar scores at minutes 1 and 5, and the high-rik index defining ABC/CARE eligibility. They also have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline (significant at 10\%). \emph{This difference is driven by female children.} See Table~\ref{table:controlsubscharacteristics} in Appendix~\ref{appendix:background} for tests of differences between these variables across children in the control group who attend and who do not attend alternative preschools. There are no differences in use of alternative preschools by gender.
 
 Most of the alternative preschools received federal subsidies and were subject to the federal regulations of the era.\footnote{Appendix~\ref{appendix:tetanus} discusses the federal standards of that day. See \citet{Department-of-Health_1968_DayCareRequirements,NCGA_1971_House-Bill-100,Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach, Burchinal_Campbell_etal_1997_CD}.} The access of control-group children to alternative programs affects the interpretation of estimated treatment effects. We discuss this issue next.
 
@@ -272,8 +272,6 @@ ABC/CARE has hundreds of treatment effects corresponding to all of the measures 
 
 Evidence from ABC/CARE and other early childhood programs is often criticized because of their small sample sizes.\footnote{See, e.g., \cite{Murray_2013_GivingKids_JJHBOOK}.} An extensive analysis reported in \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} shows that asymptotic inference and small sample permutation-based inference closely agree when applied to ABC/CARE data. For this reason, we use large sample inference throughout this paper.\footnote{Unless otherwise specified, the inference we present throughout the paper is based on $1,000$ draws from the empirical bootstrap distribution. $p$-values are one-sided, non-parametric. We high-light values when estimates are significant at $10\%$. For estimations using combining different datasets, we bootstrap all datasets and combine them to form bootstrap draws. Inference based on permutation tests is available on request.} We adjust all estimates for sample attrition using Horvitz--Thompson \citeyearpar{Horvitz_Thompson_1952_JASA} inverse probability estimators (see Appendix~\ref{appendix:attrition} for details).
 
-\textbf{[JJH: Jorge, do you agree? Do we have table of who went and who did not? Give me today.] [JLG: I agree, except for the gender difference. I'm describing this in the penultimate paragraph of Section 2.3. Please see it. There I'm sending to a Table showing the formal tests.]}
-
 We account for control group substitution using a variety of econometric procedures: (a) matching, (b) instrumental variables, and (c) control functions (selection estimators). We rely on matching to generate the main inferences in this paper because the available instruments and exclusion restrictions are weak. Estimates from all of these procedures are in rough agreement, although the standard errors associated with IV and control function estimators are large. For further discussion, see Appendix~\ref{appendix:amethodology}.
 
 \subsection{Estimated Treatment Effects}
@@ -367,7 +365,7 @@ For individual $i$, find counterparts $j(i)$ for treatment and controls such tha
 \begin{equation}\label{eq:ingrownnail}
 \sum_{j(i)\in F_0} \left( \bm{X}^{d}_{i,t} - \bm{X}_{j(i),t} \right)^{\prime} {\left( \bm{\Sigma}^d\right)}^{-1} \left(\bm{X}^{d}_{i,t} - \bm{X}_{j(i),t} \right) < \epsilon \text{ for } \qquad d \in \ \{0,1\}, t \in \{0,\dots,T\}
 \end{equation}
-where $\epsilon$ is arbitrarily small.\footnote{In practice, we set $\epsilon = 1$, but we try a range of values between .5 and 3 \textbf{[JJH: Get precise range from Jorge and citation to where shown.] [JLG: I'll add this as a case to Tables 5 and 6. ]} and find little sensitivity to the choice of $\epsilon$.} $j(i) \in F_0$, for $t \leq t^{\ast}$, where $F_0$ is the index set in the auxiliary sample and $\bm{\Sigma}^d$ is the covariance matrix of the $\bm{X}$ in the experimental sample group $d$. We construct synthetic cohort samples using the same auxiliary samples and weight using the inverse value of~\eqref{eq:ingrownnail}. We fit dynamic relationships in the synthetic cohort sample over the whole sample period. Using the dynamic relationships in the synthetic cohort sample and the initial conditions from the experimental sample, we predict future outcomes. For this approach to produce unbiased forecasts, we require, among other things, that the support of the auxiliary sample includes the support of the experimental sample, an assumption formalized in the next subsection and tested in Appendix~\ref{app:containsupport}.\footnote{Evidence on this assumption is in Appendix~\ref{appendix:methodology}. In practice, we use indicators for black and male, year of birth, and years of education and labor income at age 30 as matching variables. We explain how we pick these variables and provide a sensitivity analysis to this choice in Appendix~\ref{appendix:methodology}.}
+where $\epsilon$ is arbitrarily small.\footnote{In practice, we set $\epsilon = 1$, but we try a range of values between .5 and 3 finding little sensitivity. A full set of the results we produce in the paper for multiple values in the interval [.5,3] is available under request.} $j(i) \in F_0$, for $t \leq t^{\ast}$, where $F_0$ is the index set in the auxiliary sample and $\bm{\Sigma}^d$ is the covariance matrix of the $\bm{X}$ in the experimental sample group $d$. We construct synthetic cohort samples using the same auxiliary samples and weight using the inverse value of~\eqref{eq:ingrownnail}. We fit dynamic relationships in the synthetic cohort sample over the whole sample period. Using the dynamic relationships in the synthetic cohort sample and the initial conditions from the experimental sample, we predict future outcomes. For this approach to produce unbiased forecasts, we require, among other things, that the support of the auxiliary sample includes the support of the experimental sample, an assumption formalized in the next subsection and tested in Appendix~\ref{app:containsupport}.\footnote{Evidence on this assumption is in Appendix~\ref{appendix:methodology}. In practice, we use indicators for black and male, year of birth, and years of education and labor income at age 30 as matching variables. We explain how we pick these variables and provide a sensitivity analysis to this choice in Appendix~\ref{appendix:methodology}.}
 
 Figure~\ref{fig:labor-income-profiles} displays the life-cycle profiles for the synthetic control and treatment groups generated from this procedure.\footnote{We use labor income as an illustration in this section because the life-cycle patterns are well-known in the literature and straightforward to compare between the experimental and non-experimental samples. We predict transfer income using this same procedure. See Section~\ref{section:cbaresults} for results.} It also displays the profiles of the experimental control and treatment groups through $t^*$. The agreement through $t^*$ is close. The comparable profiles for females are in somewhat less agreement. Our pattern of life-cycle labor incomes is typical for low-skilled workers \citep{Blundell-etal_2015_J-Pub-E,Gladden_Taber_2000_WageProgression,Sanders-Taber_2012_AR,Lagakos_Moll_etal_2016_LifeCycle_NBER}.\footnote{The prediction is based on indicator variables of being male and being black, mother's education, average PIAT scores from ages 5 to 7, years of education at age 30, body-mass index at 34, labor income at ages 21 and 30, and one-period lagged labor income. We do not have all of the components of the High Risk Index in our auxiliary samples after age 45, so we only use a subset to make the life-cycle matches. A justification for the use of these variables, evidence on their predictive power, a sensitivity analysis to using different prediction variables are in Appendix~\ref{appendix:methodology}.}
 
@@ -422,7 +420,7 @@ where $\eta^d_{k,t}$ is an unobserved determinant of $X^d_{k,t}$. The $X^d_{k,t}
 We assume \emph{structural invariance} of \eqref{eq:trenchfoot} and \eqref{eq:frostbite}.\footnote{See, e.g., \citet{Frisch_1938_autonomy}, \citet{Haavelmo_1943_Econometrica,Haavelmo_1944_Econometrica}, \citet{Hurwicz_1962_structural}, and \citet{Heckman_Pinto_2015_EconometTheory}.} This means that however the arguments of \eqref{eq:trenchfoot} and \eqref{eq:frostbite} are determined, for the same numerical values of $(\bm{X}^d_t, \bm{B}, \varepsilon^d_t)$ and $(\bm{X}^d_{t-1}, \bm{B}, \eta^d_{j,t})$, we obtain the same values of $Y^d_{j,t}$.\footnote{Frisch called this notion ``autonomy.'' Much later work in statistics captures structural invariance as one aspect of ``SUTVA.'' See \citet{Holland_1986_JASA} and \citet{Heckman_2008_ISR}.} This is a fundamental property of invariant economic relationships used by economists since the time of \citet{Frisch_1938_autonomy}:
 
 \begin{assumption}\label{ass:butts}
-(Structural Invariance)
+\textbf{Structural Invariance}
 \noindent Fixing $\bm{X}^d_t = (\bm{x}_t, \bm{b},\bar{\varepsilon}_t)$, $y^d_{j,t} = \phi^d_{j,t} (\bm{x}_t, \bm{b},  \bar{\varepsilon}^d_{j,t}) \quad j \in \mathcal{J}_t, \quad t \in \{0,\ldots,T\}$ is the same value assumed by $Y^d_{j,t}$ when $\bm{X}^d_{t-1} = \bm{x}_t$, $\bm{B} = \bm{b}$, and $\varepsilon^d_{j,t} = \bar{\varepsilon}_{j,t}$, and fixing $X^d_{t-1} = (x_{t-1}, b, \bar{\eta}_t)$, $X^d_{k,t} = \gamma^d_{k,t} (x_{t-1}, b, \bar{\eta}_t) \quad k \in \mathcal{K}_t$ assumes the same value as assumed by $X^d_{k,t-1} = x_{t-1}$, $B = b$, and $\eta^d_t = \bar{\eta}_t, t \in \{0,\dots,T\}$.
 \end{assumption}
 
@@ -434,9 +432,9 @@ Equations~\eqref{eq:trenchfoot} and \eqref{eq:frostbite} can be estimated in the
 
 Our auxiliary data do not have direct information on program participation. However, given the limited size of the experimental sample, and the fact that the auxiliary cohorts were not eligible to participate in the program, it is reasonable to assume that no one in the auxiliary sample is treated ($D=0$). This means that \eqref{eq:trenchfoot} and \eqref{eq:frostbite} for $d=0$ can be identified over the supports of the available samples in the post-sample period. This implies that we can identify the post-experimental outcomes for the ABC/CARE control groups if the supports of the auxiliary data includes the support of the experimental data.
 
-Using a somewhat imprecise, but self-evident notation, $\bm{Y}_j = (\bm{Y}^1_j, \bm{Y}^0_j)$, $\bm{X}_l = (\bm{X}^1_l, \bm{X}^0_l)$, $\bm{\varepsilon}_n = (\bm{\varepsilon}^1_n, \bm{\varepsilon}^0_n)$, and define $\bm{X}^s = (\bm{X}_0,\dots,\bm{X}_T)^s$, $\bm{B}^s$, $\bm{Y}^s = (\bm{Y}_0,\dots,\bm{Y}_T)^s$, $\bm{\varepsilon}^s = (\bm{\varepsilon}_0,\dots,\bm{\varepsilon}_{T})^s$ where $s$ denotes sample membership. We assume:
+Using somewhat imprecise, but self-evident notation, $\bm{Y}_j = (\bm{Y}^1_j, \bm{Y}^0_j)$, $\bm{X}_l = (\bm{X}^1_l, \bm{X}^0_l)$, $\bm{\varepsilon}_n = (\bm{\varepsilon}^1_n, \bm{\varepsilon}^0_n)$, and define $\bm{X}^s = (\bm{X}_0,\dots,\bm{X}_T)^s$, $\bm{B}^s$, $\bm{Y}^s = (\bm{Y}_0,\dots,\bm{Y}_T)^s$, $\bm{\varepsilon}^s = (\bm{\varepsilon}_0,\dots,\bm{\varepsilon}_{T})^s$ where $s$ denotes sample membership. We assume:
 
-\begin{assumption} \label{ass:contain} (The support of the auxiliary sample contains the support of the experimental sample.)
+\begin{assumption} \label{ass:contain} \textbf{The support of the auxiliary sample contains the support of the experimental sample:}
 \begin{equation*}
 \sup(\bm{X}, \bm{Y}, \bm{B}, \varepsilon)^{s=1} \subseteq \sup (\bm{X}, \bm{Y}, \bm{B}, \varepsilon)^{s=0}.
 \end{equation*}
@@ -447,7 +445,7 @@ Predicting treatment group outcomes is a more challenging task. We do so by invo
 
 \renewcommand\theassumption{A--\arabic{assumption}(a)}
 \begin{assumption}\label{ass:eczema}
-For any $\bm{X}^d_t, \bm{B}, \varepsilon^d_{j,t}$ in $\sup(\bm{X},\bm{Y},\bm{B})^{s=1}$,
+\textbf{For any} $\bm{X^d_t}, \bm{B}, \bm{\varepsilon^d_{j,t}}$ \textbf{in} $\bm{\sup}(\bm{X},\bm{Y},\bm{B})^{s=1}$,
 \begin{equation*}
 \phi^1_{j,t} (\bm{X}^d_t, \bm{B}, \varepsilon^d_{j,t}) = \phi^0_{j,t} (\bm{X}^d_t, \bm{B}, \varepsilon^d_{j,t}) \qquad j \in \mathcal J_t, \quad t \in \{0,\dots,T\},
 \end{equation*}
@@ -458,7 +456,7 @@ We make a corresponding assumption for the equation governing the evolution of i
 \addtocounter{assumption}{-1}
 \renewcommand\theassumption{A--\arabic{assumption}(b)}
 \begin{assumption}\label{ass:psoriasis}
-Given $\bm{X}^d_{t-1}, \bm{B}, \eta^d_{l,t}$,
+\textbf{Given} $\bm{X^d_{t-1}}, \bm{B}, \bm{\eta^d_{l,t}}$,
 \begin{equation*}
 \gamma^1_{j,t} (\bm{X}^d_{t-1}, \bm{B}, \eta^d_{t-1}) = \gamma^0_{j,t} (\bm{X}^d_{t-1}, \bm{B}, \eta^d_{t-1}) \qquad k \in \mathcal{K}_t, \quad t \in \{0,\dots,T\}.
 \end{equation*}
@@ -466,7 +464,7 @@ Given $\bm{X}^d_{t-1}, \bm{B}, \eta^d_{l,t}$,
 We assume that the $\bm{X}^d_t$ are exogenous with respect to the errors:
 
 \renewcommand\theassumption{A--\arabic{assumption}}
-\begin{assumption}\label{ass:corns} (Exogeneity)
+\begin{assumption}\label{ass:corns} \textbf{Exogeneity}
 \begin{equation*}
 \bm{\varepsilon}^d_{j,t} \indep \bm{X}^{d^{\prime}}_{t^{''}} \quad \forall \; t,t^{''} \in \left[ 0,...,T \right], d,d^{\prime} \in \left\{ 0,1 \right\}, \; \forall \quad j \in \mathcal{J}_t, \quad t \in \left\{0,\dots,T\right\}
 \end{equation*}
@@ -474,24 +472,26 @@ We assume that the $\bm{X}^d_t$ are exogenous with respect to the errors:
 \noindent in sample $S=1$ and the counterpart assumption in $S=0$.
 
 \begin{theorem}
-Putting Assumptions~\ref{ass:butts}--\ref{ass:corns} together, under full observability of $\bm{X}^d_t$, estimation on the matched samples based on \eqref{eq:ingrownnail} generates unbiased out of sample treatment effects. The proof is straightforward.\footnote{See the analysis of \citet{Heckman_Navarro_2004_REStat}, who discuss the central role of exogeneity assumptions in matching.} $\Box$
+Putting Assumptions~\ref{ass:butts}--\ref{ass:corns} together, under full observability of $\bm{X}^d_t$, estimation on the matched samples based on \eqref{eq:ingrownnail} generates unbiased out of sample treatment effects. \footnote{See the analysis of \citet{Heckman_Navarro_2004_REStat}, who discuss the central role of exogeneity assumptions in matching.} $\Box$ The proof is straightforward.
 \end{theorem}
 
 Our predictions are based on matching individuals in the non-experimental sample to individuals in the experimental samples \textit{on the basis of observed characteristics}. In general, the dependence between $\bm{X}_{t}$ and $\bm{\varepsilon}_{t}$ is not the same across those two samples. Assumption~\eqref{ass:corns} may be violated in either sample. Such violations can arise in two ways: (i) the experiment does not necessarily identify the production function in \eqref{eq:trenchfoot} because there could be unmeasured inputs (generated by the experiment not fully captured by the measured variables and (ii) even if we can measure all inputs, the inputs may not be exogenous in the non-experimental sample.
 
 A simple example is the following: in the treatment sample, the program causes more education. Suppose we match based on education to create a treatment synthetic cohort. But doing so, we may match individuals in the non-experimental sample who are highly educated because they come from a better backgrounds and are more motivated compared to those in the experiment who are induced to be educated by the experiment. Omitted ability could bias predictions based on the matched samples.
 
-We address this issue in Appendix~\ref{app:endogeneity} using a factor-structure-based control function approach developed and applied in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Using measures of latent skills, we assume a factor structure for $\bm{\varepsilon}^d_t, d \in \left\{0,1\right\}, t \in \left\{0,...,T\right\}$ and assume that the extracted factors are the source of violations of Assumption~\eqref{ass:corns}. We test if the estimated relationships in both experimental and non-experimental samples are substantially altered when controlling for this source of endogeneity (see Appendix~\ref{app:endogeneity}). They are not. \textbf{[JJH: Jorge, do we do this in comparison samples? Where?] [JLG: yes, noting the appendix after assertion now. And they effectively do not change in either the experimental or non-experimental samples.]}
+We address this issue in Appendix~\ref{app:endogeneity} using a factor-structure-based control function approach developed and applied in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Using measures of latent skills, we assume a factor structure for $\bm{\varepsilon}^d_t, d \in \left\{0,1\right\}, t \in \left\{0,...,T\right\}$ and assume that the extracted factors are the source of violations of Assumption~\eqref{ass:corns}. We test if the estimated relationships in both experimental and non-experimental samples are substantially altered when controlling for this source of endogeneity (see Appendix~\ref{app:endogeneity}). They are not. \textbf{[JJH: Jorge, do we do this in comparison samples? Where?] [JLG: yes, noting the appendix after assertion now. And they effectively do not change in either the experimental or non-experimental samples.] [JJH: Give me updated figure.] [JLG: All tables with these tests in Appendix C.6.]}
 
 We also examine if our predictions differ when we control for the proxied factors, aside from the rest of the variables we use to predict. Predictions do not change much. We use this same procedure to test Assumption~\ref{ass:eczema} in Appendix~\ref{app:invariance} for the experimental sample. We fail to reject the null hypotheses of invariance of the technology across treatment regimes.
 
 \subsection{Parental Income} \label{section:pincome}
 
-In practice, ABC/CARE had a childcare component: child care of the mothers of parents of treated children was offered at the center for nine hours a day for five years. Recall that only $27\%$ of mothers of children reported to live with a partner at baseline and this status barely changed during the experiment . Arguably, this is the component that generates the treatment effects in maternal education, labor force participation, and parental income that reported in Table~\ref{table:tescombined} and Appendix~\ref{appendix:results}.
+\textbf{[JLG: All requests in this section have been completed and added to the discussion.]}
+
+In practice, ABC/CARE had a childcare component: child care of the mothers of parents of treated children was offered at the center for more than nine hours a day for five years. Recall that only $27\%$ of mothers of children reported to live with a partner at baseline and this status barely changed during the experiment (See Appendix~\ref{appendix:background}). Arguably, this is the component that generates the treatment effects in maternal education, labor force participation, and parental income that reported in Table~\ref{table:tescombined} and Appendix~\ref{appendix:results}.
 
 We observe parental income at eight different years from when the experimental subjects were born until they were 21.\footnote{The ages at which parental income is absorbed is at ages 0, 1.5, 3.5, 4.5, 8, 12, 15, and 21. At age 21 the mothers in ABC/CARE are, on average, 41 years old.} Our baseline estimation considers the treatment effect on parental income without going beyond this age. We linearly interpolate the ages for which we do not have observations between 0 and 21.\footnote{Depending on the model of labor supply, the earnings should or should not include the value of forgone leisure. We conduct a sensitivity analysis below by considering the case when markets are assumed to be clearing and the marginal value of leisure is the market wage.} As Table~\ref{table:tescombined} shows, treatment effects on parental income are sustained through child's age 21. This is presumably due to wage growth due to higher education and/or experience. An ideal approach considers the profile over the full life cycle of mothers. We propose two alternative approaches for doing this in Appendix~\ref{app:parentalincome}: (i) an approach based on parameterizing parental labor income using standard Mincer equations; (ii) an approach based on the model of Section~\ref{section:just}. We present estimates using the baseline approach and for these two alternatives in Section~\ref{section:cbaresults}. The benefits of he program increase when considering the full life cycle of mothers, in either approach.
 
-Note that if it is true that ABC/CARE had a childcare component benefits parental labor market outcomes, it is likely the case that it benefits parents who, at baseline, did not have any other children. If they did, then they might have had to take care of other children anyway, weakening the childcare-driven effect (especially if there are younger siblings present). Figure~\ref{figure:pincome} shows that the net increase (treatment minus control) in discounted parental incomes is much higher in the absence of siblings (of the participant children) at baseline. The effect weakens when comparing children who have younger siblings, relative children who have adult siblings.
+Note that if it is true that ABC/CARE had a childcare component benefits parental labor market outcomes, it is likely the case that it benefits parents who, at baseline, did not have any other children. If they did, then they might have had to take care of other children anyway, weakening the childcare-driven effect (especially if there are younger siblings present). Figure~\ref{figure:pincome} shows that the net increase (treatment minus control) in discounted parental incomes is much higher in the absence of siblings (of the participant children) at baseline. The effect also weakens when comparing children who have children younger than 5 years old to children who have siblings 5 years old or younger.
 
 \begin{figure}[!htbp]
 \centering
@@ -503,11 +503,11 @@ Note that if it is true that ABC/CARE had a childcare component benefits parenta
 \end{subfigure}%
 \begin{subfigure}[h]{0.5\textwidth}
 		\centering
-		\caption{Young Siblings vs. Adult Siblings}
-		\includegraphics[width=\textwidth]{output/abccare_pincomesum_spooled.eps}
+		\caption{Siblings Younger than 5 vs. Siblings 5 or Older}
+		\includegraphics[width=\textwidth]{output/abccare_pincomesumsibage_spooled.eps}
 \end{subfigure}
 \footnotesize \justify
-Note: Panel (a) displays the average parental income of parents of children with and without siblings at baseline. Panel (b) displays the average parental income of parents of children with young siblings (younger than 18 years old) and children with adult siblings (18 years old or older) at baseline. Parental income is in 2014 USD discounted to child's participant age 0. We use the baseline measure of parental income in Section~\ref{section:pincome}.
+Note: Panel (a) displays the average parental income of parents of children with and without siblings at baseline. Panel (b) displays the average parental income of parents of children with young siblings (younger than 5 years old) and children with older siblings (5 years old or older) at baseline. Panel (b) drops children without siblings at baseline. Parental income is in 2014 USD discounted to child's participant age 0. We use the baseline measure of parental income in Section~\ref{section:pincome}. Results using our alternative parental income measures are similar (see Appendix~\ref{app:parentalincome}).
 \end{figure}
 
 \subsection{Health} \label{section:health}
@@ -663,7 +663,7 @@ We do not perform sensitivity analysis to investigate cohort effects of health c
 \input{output/allbc_sens}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table displays sensitivity analysis of our baseline benefit/cost ratio calculation to the perturbations indexed in the different rows. The characteristics of the \textit{baseline} calculation are in the table header. IPW: adjusts for attrition and item non-response (see Appendix~\ref{appendix:attrition} for details). Controls: Apgar scores at ages 1 and 5 and a high-risk index (see Appendix~\ref{appendix:results} for details on how we choose these controls). When predicting up to ages 21 and 30, we consider all benefits and costs up to these ages, respectively. Counterfactuals: we consider treatment vs. next best (baseline), treatment vs. stay at home, and treatment vs. alternative preschools (see Section~\ref{section:methodsquestions} for a discussion). Deadweight loss is the loss implied by any public expenditure (0\% is no loss and 100\% is one dollar loss per each dollar spent). Discount rate: rate to discount benefits to child's age 0 (in all calculations). Parental income: see Appendix~\ref{app:parentalincome} for details on the two alternative predictions (Mincer and Life-cycle). Labor Income: .5\ annual growth (decay) is an annual wage growth (decay) due to cohort effects. Crime: major crimes are rape and murder; half costs takes half of victimization and judiciary costs. Health (QALYs): drop all sets the value of life equal to zero. Standard errors obtained from the empirical bootstrap distribution are in parentheses.
+\item Note: This table displays sensitivity analysis of our baseline benefit/cost ratio calculation to the perturbations indexed in the different rows. The characteristics of the \textit{baseline} calculation are in the table header. IPW: adjusts for attrition and item non-response (see Appendix~\ref{appendix:attrition} for details). Controls: Apgar scores at ages 1 and 5 and a high-risk index (see Appendix~\ref{appendix:results} for details on how we choose these controls). When predicting up to ages 21 and 30, we consider all benefits and costs up to these ages, respectively. Counterfactuals: we consider treatment vs. next best (baseline), treatment vs. stay at home, and treatment vs. alternative preschools (see Section~\ref{section:methodsquestions} for a discussion). Deadweight loss is the loss implied by any public expenditure (0\% is no loss and 100\% is one dollar loss per each dollar spent). Discount rate: rate to discount benefits to child's age 0 (in all calculations). Parental income: see Appendix~\ref{app:parentalincome} for details on the two alternative predictions (Mincer and Life-cycle). Labor Income: .5\ annual growth (decay) is an annual wage growth (decay) due to cohort effects. Crime: major crimes are rape and murder; half costs takes half of victimization and judiciary costs. Health (QALYs): drop all sets the value of life equal to zero. Standard errors obtained from the empirical bootstrap distribution are in parentheses. Bolded $p$-values are significant at 10\%. For details on the null hypothesis see Table~\ref{table:cba}.
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
@@ -677,7 +677,7 @@ We do not perform sensitivity analysis to investigate cohort effects of health c
 \input{output/allirr_sens}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table displays sensitivity analysis of our baseline internal rate of return calculation to the perturbations indexed in the different rows. The characteristics of the \textit{baseline} calculation are in the table header. IPW: adjusts for attrition and item non-response (see Appendix~\ref{appendix:attrition} for details). Controls: Apgar scores at ages 1 and 5 and a high-risk index (see Appendix~\ref{appendix:results} for details on how we choose these controls). When predicting up to ages 21 and 30, we consider all benefits and costs up to these ages, respectively. Counterfactuals: we consider treatment vs. next best (baseline), treatment vs. stay at home, and treatment vs. alternative preschools (see Section~\ref{section:methodsquestions} for a discussion). Deadweight loss is the loss implied by any public expenditure (0\% is no loss and 100\% is one dollar loss per each dollar spent). Parental income: see Appendix~\ref{app:parentalincome} for details on the two alternative predictions (Mincer and Life-cycle). Labor Income: .5\ annual growth is an annual wage growth due to cohort effects; only benefit assumes labor income is the only benefit of the program. Crime: major crimes are rape and murder; half costs takes half of victimization and judiciary costs. Health (QALYs): drop all sets the value of life equal to zero. N/A: Standard errors obtained from the empirical bootstrap distribution are in parentheses.
+\item Note: This table displays sensitivity analysis of our baseline internal rate of return calculation to the perturbations indexed in the different rows. The characteristics of the \textit{baseline} calculation are in the table header. IPW: adjusts for attrition and item non-response (see Appendix~\ref{appendix:attrition} for details). Controls: Apgar scores at ages 1 and 5 and a high-risk index (see Appendix~\ref{appendix:results} for details on how we choose these controls). When predicting up to ages 21 and 30, we consider all benefits and costs up to these ages, respectively. Counterfactuals: we consider treatment vs. next best (baseline), treatment vs. stay at home, and treatment vs. alternative preschools (see Section~\ref{section:methodsquestions} for a discussion). Deadweight loss is the loss implied by any public expenditure (0\% is no loss and 100\% is one dollar loss per each dollar spent). Parental income: see Appendix~\ref{app:parentalincome} for details on the two alternative predictions (Mincer and Life-cycle). Labor Income: .5\ annual growth is an annual wage growth due to cohort effects; only benefit assumes labor income is the only benefit of the program. Crime: major crimes are rape and murder; half costs takes half of victimization and judiciary costs. Health (QALYs): drop all sets the value of life equal to zero. N/A: Standard errors obtained from the empirical bootstrap distribution are in parentheses. Bolded $p$-values are significant at 10\%. For details on the null hypothesis see Table~\ref{table:cba}.
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
@@ -715,7 +715,7 @@ We also produce a benefit/cost analysis of the program when accounting for contr
 \input{output/cba_summary_controls_trim.tex}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table displays estimates of the internal rate of return (IRR) and the benefit/cost ratio (B/C) for ABC/CARE for three cases. Not accounting for control substitution (baseline); comparing ABC/CARE to staying at home (relative to staying at home); and comparing ABC/CARE to alternative preschools (relative to alternative preschools). For the B/C we use a discount rate of $3\%$. We test the null hypotheses $\text{IRR} = 3\%$ and $\text{B/C} = 1$---we elect $3\%$ because that is the discount rate we use. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We highlight point estimates significant at the $10\%$ level.
+\item Note: This table displays estimates of the internal rate of return (IRR) and the benefit/cost ratio (B/C) for ABC/CARE for three cases. Not accounting for control substitution (baseline); comparing ABC/CARE to staying at home (relative to staying at home); and comparing ABC/CARE to alternative preschools (relative to alternative preschools). For the B/C we use a discount rate of $3\%$. We test the null hypotheses $\text{IRR} = 3\%$ and $\text{B/C} = 1$---we elect $3\%$ because that is the discount rate we use. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We highlight point estimates significant at the $10\%$ level. 
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
