slides for roll call

--- a/Slides.tex
+++ b/Slides.tex
@@ -9,17 +9,17 @@
 
 \begin{frame}[plain]
 \begin{center}
-	\textbf{Universal versus Targeted Preschools: \\
-	by Brant Abbott and Dominik Sachs}
+	\textbf{The Life-cycle Benefits of an Influential \\
+	Early Childhood Program}
 
 \begin{center}
 \begin{figure}[H] 
 \label{figure:initial}
 \centering
-\includegraphics[width=.2\columnwidth]{uchicago.png}
+\includegraphics[width=.5\columnwidth]{uchicago2.png}
 \end{figure}
 \end{center}
-	\textbf \textit{{\footnotesize \\ The University of Chicago \\ Department of Economics}}	
+	\textbf \textit{{\footnotesize CBA Team}}	
 \end{center}
 \end{frame}
 
