--- a/beamerthemeUChicagoJorge.sty
+++ b/beamerthemeUChicagoJorge.sty
@@ -244,7 +244,7 @@
 \newcommand{\Ffootline}{%
   	\insertsection % The left end of the footline
   \hfill
-	\textit{Garc\'{i}a, Department of Economics. The University of Chicago} % The center
+	\textit{Garc\'{i}a et al., Department of Economics. The University of Chicago} % The center
   \hfill
   	\insertframenumber/\inserttotalframenumber} % And the right end
 
