--- a/output/abccare_endog_si30y_inc_labor.tex
+++ b/output/abccare_endog_si30y_inc_labor.tex
@@ -7,11 +7,10 @@ PIAT (5-7) &         &         &         &         &   -64.975 &     0.570 &  -3
 Education (30) &         &         &         &         &  8,071.605 &     0.000 &  8,976.030 &     0.000 & 10,252.614 &     0.010 & 12,651.459 &     0.010 \\  
 Labor Income (21) &         &         &         &         &     0.129 &     0.335 &     0.181 &     0.330 &     0.238 &     0.160 &     0.237 &     0.300 \\  
 BMI (34) &         &         &         &         &         &         &         &         &  -289.772 &     0.880 &  -320.442 &     0.865 \\  
-$\hat{\bm{\theta}}}_{c}$  &         &         &  1,857.328 &     0.350 &         &         &   876.432 &     0.460 &         &         & -2,587.188 &     0.665 \\  
-$\hat{\bm{\theta}}}_{n}$  &         &         &  3,407.521 &     0.235 &         &         &  7,015.652 &     0.050 &         &         &  4,328.802 &     0.205 \\  
+$\hat{\bm{\theta}}_{c}$  &         &         &  1,857.328 &     0.350 &         &         &   876.432 &     0.460 &         &         & -2,587.188 &     0.665 \\  
+$\hat{\bm{\theta}}_{n}$  &         &         &  3,407.521 &     0.235 &         &         &  7,015.652 &     0.050 &         &         &  4,328.802 &     0.205 \\  
 Constant  &  6861.393 &     0.405 & 1,3014.085 &     0.345 & -78,000.00 &     0.960 & -75,000.00 &     0.915 & -69,100.00 &     0.975 & -95,900.00 &     0.955 \\ \\ \midrule
 $F$-stat &     2.072 &      &     1.749 &      &     6.019 &      &     5.038 &      &     4.208 &      &     3.796 &      \\  
 $R^2$ &     0.032 &      &     0.060 &      &     0.205 &      &     0.248 &      &     0.348 &      &     0.444 &     \\  
 Observations &   132 &    &    100 &      &   110 &     &    91 &     &    76.350 &      &    61.800 &     \\  
-\hline \hline \end{tabular}
-\end{table}
+\bottomrule \end{tabular}
