--- a/output/abccare_endog_control.tex
+++ b/output/abccare_endog_control.tex
@@ -1,13 +1,17 @@
-\begin{tabular}{lcccccccccccc} \toprule
- & \multicolumn{2}{c}{(1)}  &  \multicolumn{2}{c}{(2)}  &  \multicolumn{2}{c}{(3)}  &  \multicolumn{2}{c}{(4)}  & \multicolumn{2}{c}{(5)} & \multicolumn{2}{c}{(6)} \\  
-Mother's Education &   750.205 &     0.365 &   176.630 &     0.445 &  -848.096 &     0.710 & -1006.963 &     0.705 & -2173.476 &     0.850 & -3037.516 &     0.865 \\  
-PIAT (5-7) &         . &         . &         . &         . &   105.463 &     0.340 &   485.077 &     0.195 &   409.121 &     0.205 &  1097.040 &     0.040 \\  
-Education (30)  &         . &         . &         . &         . &  3311.359 &     0.005 &  4381.955 &     0.010 &  2325.035 &     0.190 &  4018.356 &     0.150 \\  
-Labor Income (21) &         . &         . &         . &         . &     0.652 &     0.025 &     0.941 &     0.030 &     0.528 &     0.130 &     0.467 &     0.265 \\  
-BMI (34) &         . &         . &         . &         . &         . &         . &         . &         . &  -124.659 &     0.595 &   224.972 &     0.365 \\  
-$\hat{\theta}_{c}$ &         . &         . &   579.347 &     0.435 &         . &         . &   485.077 &     0.195 &         . &         . & -7309.957 &     0.835 \\  
-$\hat{\theta}_{c}$ &         . &         . &  -758.292 &     0.540 &         . &         . &  4381.955 &     0.010 &         . &         . &  1383.193 &     0.415 \\  
-Constant & 18571.154 &     0.175 & 23986.424 &     0.175 &   105.463 &     0.340 &     0.941 &     0.030 & -2.32e+04 &     0.700 & -1.12e+05 &     0.940 \\ \\ \midrule  
- &     \multicolumn{c{2}{0.018}     &     \multicolumn{2}{c}{0.074}      &     \multicolumn{2}{c}{0.281} &        \multicolumn{2}{c}{0.380} &  \multicolumn{2}{c}{0.331} &          \multicolumn{2}{c}{0.472}       \\ 
-$R^2$ &    \multicolumn{2}{c{66} &         \multicolumn{2}{c}{50} &        \multicolumn{2}{c}{54}&         \multicolumn{2}{c}{46} &      \multicolumn{2}{c}{33} &        \multicolumn{2}{c}{27}     \\  
-\bottomrule \end{tabular}
+% matrix: allcoeffsp_inc21y file: abccare_endog_control.tex  28 Sep 2016 16:16:49
+\begin{table}[htbp]
+\begin{tabular}{lcccccccccccc} \hline \hline
+ & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
+r1 &  2124.375 &     0.000 &  2533.156 &     0.000 &  2664.139 &     0.000 &   671.166 &     0.300 &  3598.991 &     0.000 &   431.279 &     0.500 \\  
+r2 &         . &         . &         . &         . &  -515.232 &     1.000 &   100.810 &     0.400 &  -532.338 &     0.800 &  1236.955 &     0.400 \\  
+r3 &         . &         . &         . &         . &  -159.368 &     0.500 &  1230.658 &     0.100 & -2298.798 &     0.700 &   679.801 &     0.500 \\  
+r4 &         . &         . &         . &         . &     0.004 &     0.500 &     0.031 &     0.500 &    -0.414 &     0.700 &    -1.297 &     0.900 \\  
+r5 &         . &         . &         . &         . &         . &         . &         . &         . &  -493.636 &     0.900 &  -699.793 &     0.800 \\  
+r6 &         . &         . &  -943.476 &     0.700 &         . &         . &  1579.921 &     0.300 &         . &         . & -8932.630 &     0.500 \\  
+r7 &         . &         . &  1075.222 &     0.300 &         . &         . &  5540.354 &     0.000 &         . &         . & -6114.541 &     0.600 \\  
+r8 &  -394.008 &     0.600 & -8238.588 &     0.900 & 43150.070 &     0.000 & -9163.732 &     0.600 & 81495.766 &     0.200 & -7.18e+04 &     0.500 \\  
+r9 &     6.302 &     0.000 &     3.171 &     0.000 &     3.349 &     0.100 &     2.263 &     0.000 &    11.061 &     0.100 &   180.547 &     0.300 \\  
+r10 &     0.094 &     0.100 &     0.180 &     0.000 &     0.244 &     0.000 &     0.253 &     0.000 &     0.493 &     0.000 &     0.945 &     0.000 \\  
+r11 &    38.200 &     0.000 &    26.600 &     0.000 &    27.200 &     0.000 &    48.000 &     0.000 &    17.400 &     0.000 &    13.800 &     0.000 \\  
+\hline \hline \end{tabular}
+\end{table}
