--- a/output/abccare_endogp_inc21y_control.tex
+++ b/output/abccare_endogp_inc21y_control.tex
@@ -1,17 +1,15 @@
-% matrix: allcoeffsp_inc21y file: abccare_endogp_inc21y_control.tex  28 Sep 2016 16:22:12
-\begin{table}[htbp]
-\begin{tabular}{lcccccccccccc} \hline \hline
- & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
+\begin{tabular}{lcccccccccccc} \toprule
+ & \multicolumn{2}{c}{(1)}  &  \multicolumn{2}{c}{(2)}  &  \multicolumn{2}{c}{(3)}  &  \multicolumn{2}{c}{(4)}  & \multicolumn{2}{c}{(5)} & \multicolumn{2}{c}{(6)} \\  
+ & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value \\ \midrule
 r1 &  2415.550 &     0.000 &  2716.623 &     0.010 &  2584.187 &     0.005 &  1718.969 &     0.100 &  3778.671 &     0.030 &  5270.697 &     0.170 \\  
 r2 &         . &         . &         . &         . &  -242.900 &     0.700 &   407.107 &     0.285 &  -195.185 &     0.665 &  2133.037 &     0.205 \\  
 r3 &         . &         . &         . &         . &  -357.706 &     0.605 &   291.017 &     0.410 & -2011.729 &     0.715 &   525.597 &     0.460 \\  
 r4 &         . &         . &         . &         . &     0.003 &     0.500 &     0.117 &     0.395 &    -0.282 &     0.770 &    -0.615 &     0.715 \\  
 r5 &         . &         . &         . &         . &         . &         . &         . &         . &  -119.097 &     0.660 &   -68.442 &     0.520 \\  
 r6 &         . &         . &   -53.861 &     0.500 &         . &         . & -4078.860 &     0.805 &         . &         . & -4796.737 &     0.640 \\  
-r7 &         . &         . &  1207.343 &     0.355 &         . &         . &  3546.750 &     0.195 &         . &         . & -2027.290 &     0.520 \\  
-r8 & -2620.667 &     0.630 & -7986.526 &     0.830 & 21816.246 &     0.265 & -4.25e+04 &     0.725 & 31061.662 &     0.335 & -2.33e+05 &     0.775 \\  
+r7 &         . &         . &  1207.343 &     0.355 &         . &         . &  3546.750 &     0.195 &         . &         . & -2027.290 &     0.520 \\  \\ \midrule
+r8 & -2,620.667 &     0.630 & -7,986.526 &     0.830 & 21,816.246 &     0.265 & -42,500.00 &     0.725 & 31,061.662 &     0.335 & -233,000.00 &     0.775 \\  \\ \midrule
 r9 &     9.939 &     0.045 &     5.715 &     0.025 &     3.931 &     0.055 &     9.024 &     0.030 &   189.704 &     0.015 & 11567.001 &     0.125 \\  
 r10 &     0.148 &     0.015 &     0.271 &     0.010 &     0.269 &     0.005 &     0.436 &     0.005 &     0.506 &     0.000 &     0.844 &     0.000 \\  
 r11 &    36.250 &     0.000 &    27.540 &     0.000 &    27.670 &     0.000 &    24.540 &     0.000 &    18.810 &     0.000 &    15.680 &     0.000 \\  
 \hline \hline \end{tabular}
-\end{table}
