--- a/output/abccare_endogsi30y_inc_trans_pub_cnsly.tex
+++ b/output/abccare_endogsi30y_inc_trans_pub_cnsly.tex
@@ -1,8 +1,6 @@
-% matrix: allcoeffssi30y_inc_trans_pub file: abccare_endogsi30y_inc_trans_pub_cnsly.tex  28 Sep 2016 16:31:02
-\begin{table}[htbp]
 \begin{tabular}{lcccccccccccc} \hline \hline
  & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  & t3completemean  & t3completepvalue  & t3fcompletemean  & t3fcompletepvalue  \\  \hline 
-r1 &   -21.038 &     0.500 &  8234.812 &     0.035 &  1559.504 &     0.350 &  8668.087 &     0.040 &  1672.412 &     0.330 &  8935.317 &     0.035 \\  
+Mother's Education &   -21.038 &     0.500 &  8234.812 &     0.035 &  1559.504 &     0.350 &  8668.087 &     0.040 &  1672.412 &     0.330 &  8935.317 &     0.035 \\  
 r2 &         . &         . &         . &         . &  -329.245 &     0.660 &  -401.046 &     0.675 &  -310.427 &     0.655 &  -490.276 &     0.705 \\  
 r3 &         . &         . &         . &         . & -6663.597 &     0.880 & -4511.125 &     0.820 & -6539.961 &     0.880 & -4471.057 &     0.815 \\  
 r4 &         . &         . &         . &         . &     0.222 &     0.395 &    -0.840 &     0.965 &     0.204 &     0.420 &    -0.764 &     0.945 \\  
@@ -14,4 +12,3 @@ r9 &     0.915 &     0.080 &     1.941 &     0.010 &     1.676 &     0.035 &    
 r10 &     0.001 &     0.085 &     0.025 &     0.020 &     0.009 &     0.045 &     0.043 &     0.025 &     0.011 &     0.030 &     0.054 &     0.015 \\  
 r11 &  1146.660 &     0.000 &   245.300 &     0.000 &   894.170 &     0.000 &   196.350 &     0.000 &   893.200 &     0.000 &   195.380 &     0.000 \\  
 \hline \hline \end{tabular}
-\end{table}
