--- a/output/abccare_funcform3_pi_ready.tex
+++ b/output/abccare_funcform3_pi_ready.tex
@@ -5,7 +5,7 @@ PIAT (5-7) &   199.457 &     0.385 &   421.353 &     0.220 &   221.896 &     0.4
 Education (30) & -3873.775 &     0.835 & -1096.302 &     0.680 &  2777.473 &     0.300 &  2671.076 &     0.395 & -3009.434 &     0.765 & -5680.510 &     0.670 \\  
 Labor Income (21) &    -0.263 &     0.695 &     0.294 &     0.365 &     0.556 &     0.320 &    -1.533 &     0.825 &     0.473 &     0.315 &     2.006 &     0.175 \\  
 BMI (34) &  -206.486 &     0.695 &   -36.710 &     0.560 &   169.776 &     0.390 &  -349.869 &     0.630 &    89.753 &     0.415 &   439.622 &     0.380 \\  
-$\hat{\bm{\theta}}_c$ &         . &         . &         . &         . &         . &         . &  -731.798 &     0.520 & 15510.768 &     0.140 & 16242.565 &     0.235 \\  
-$\hat{\bm{\theta}}_n$ &         . &         . &         . &         . &         . &         . & -4366.959 &     0.540 &  4909.620 &     0.240 &  9276.579 &     0.355 \\  
+$\hat{\bm{\theta}}_c$ &         &         &         &         &         &         &  -731.798 &     0.520 & 15510.768 &     0.140 & 16242.565 &     0.235 \\  
+$\hat{\bm{\theta}}_n$ &         &         &         &         &         &         & -4366.959 &     0.540 &  4909.620 &     0.240 &  9276.579 &     0.355 \\  
 Constant & 23,497.715 &     0.430 & 38,170.301 &     0.265 & 14,672.586 &     0.450 & -105,000.00e+05 &     0.720 &  137,000.00 &     0.190 &  242000.000 &     0.210 \\  
 \bottomrule \end{tabular}
